<resources>

    <string name="latitude_label">Latitude</string>
    <string name="longitude_label">Longitude</string>
    <string name="last_update_time_label">Last location update time</string>

    <string name="start_updates">Start updates</string>
    <string name="stop_updates">Stop updates</string>

    <string name="location_settings_inadequate_warning">The location settings on the device are not
        adequate to run this sample. Fix in Settings.</string>

    <string name="permission_rationale">Location permission is needed for core functionality</string>
    <string name="permission_rationale2">Read/Write permission is needed for core functionality</string>
    <string name="permission_denied_explanation">Permission was denied, but is needed for core
        functionality.</string>
    <string name="settings">Settings</string>

    <!-- Activity name strings -->
    <string name="app_name">StudySpot</string>
    <string name="name_my_account">My Account</string>

    <!-- Menu strings -->
    <string name="menu_settings">Settings</string>
    <string name="menu_send_hours">Send Hours</string>
    <string name="menu_show_studySpot">Show StudySpot</string>
    <string name="menu_my_recorded_hours">My Recorded Hours</string>

    <string name="menu_coach_finora">Coach Finora</string>
    <string name="menu_coach_white">Coach White</string>
    <string name="menu_coach_biggerstaff">Coach Biggerstaff</string>


    <!-- Card View strings -->
    <string name="cv_current_session">Current Session:</string>
    <string name="cv_weekly_totals">Weekly Total:</string>
    <string name="fab_sent_hours">Sent your hours to </string>
    <string name="btn_my_hours">My Hours</string>
    <string name="btn_view_studyspot">View StudySpot</string>

    <!-- Geofence Add/Remove -->
    <string name="geofences_added">Geofences added</string>
    <string name="geofences_removed">Geofences removed</string>

    <!-- Error strings -->
    <string name="geofence_not_available">Geofence service is not available now</string>
    <string name="geofence_too_many_geofences">Your app has registered too many geofences</string>
    <string name="geofence_too_many_pending_intents">
        You have provided too many PendingIntents to the addGeofences() call
    </string>
    <string name="unknown_geofence_error">
        Unknown error: the Geofence service is not available now
    </string>
    <string name="geofence_transition_invalid_type">
        Geofence transition error: invalid transition type %1$d
    </string>

    <!-- Transition type strings -->
    <string name="geofence_transition_entered">Entered</string>
    <string name="geofence_transition_exited">Exited</string>
    <string name="unknown_geofence_transition">Unknown Transition</string>

    <string name="geofence_transition_notification_text">
        Click notification to return to app
    </string>

    <string name="insufficient_permissions">Insufficient permissions.</string>


    <!-- My Recorded Hours Activity -->
    <string name="title_activity_my_recorded_hours">My Recorded Hours</string>
    <string name="tab_this_week">This Week</string>
    <string name="tab_all_sessions">All Sessions</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>


    <!-- Preferences -->

    <string name="title_activity_settings">Settings</string>

    <!-- Label for the default coach preference -->
    <string name="pref_coach_label">Default Coach</string>

    <!-- Key name for storing the coach in SharedPreferences -->
    <string name="pref_coach_key" translatable="false">coach</string>

    <!-- Default for coach preference -->
    <string name="pref_coach_default" translatable="false">Coach Finora</string>

    <!-- Labels for different coaches -->
    <string name="pref_coach_label_finora">Coach Finora</string>
    <string name="pref_coach_label_white">Coach White</string>
    <string name="pref_coach_label_biggerstaff">Coach Biggerstaff</string>

    <!-- Email for different coaches -->
    <string name="email_coach_finora">vfinora@mhu.edu</string>
    <string name="email_coach_white">wwhite@mhu.edu</string>
    <string name="email_coach_biggerstaff">abiggerstaff@mhu.edu</string>

    <!-- Value in SharedPreferences for different coaches -->
    <string name="pref_coach_finora" translatable="false">vfinora@mhu.edu</string>
    <string name="pref_coach_white" translatable="false">wwhite@mhu.edu</string>
    <string name="pref_coach_biggerstaff" translatable="false">abiggerstaff@mhu.edu</string>

    <!-- Label for Do Not Disturb checkbox -->
    <string name="pref_disturb_label">Do Not Disturb</string>

    <!-- Key name for storing Do Not Disturb option in SharedPreferences -->
    <string name="pref_disturb_key" translatable="false">disturb</string>

    <!-- Default for Do Not Disturb preference -->
    <string name="pref_disturb_default" translatable="false"></string>


    <string name="undo_string">Undo</string>

</resources>
